# tfp

./: .gitignore  CLAUDE.md  LICENSE  README.md  install-tenv.sh  pyproject.toml  tasks.py
.claude/: settings.json
.github/: ISSUE_TEMPLATE.md
.github/workflows/: codeql.yml  qlty.yml  test.yml
docs/: CONTRIBUTING.md
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_report.py
tfp/: cli.py  report.md.jinja
tfp/tests/: conftest.py  test_plan.py
tfp/tests/testlibraries/: __init__.py  runner.py
tfpcli/: __init__.py  cli.py  config.py  report.py
tfpcli/tests/: __init__.py  conftest.py  test_plan.py
tfpcli/tests/testlibraries/: __init__.py  runner.py
