[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bump-my-version",
    "invokelint[basic]>=0.19.0",
    "pytest-mock",
    "pyvelocity; python_version >= '3.9'",
]

[project]
name = "tfp"
version = "0.1.0"
description = "Terraform parallel execution for each workspace."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["tfp"]
authors = [
    {name = "Yukihiko Shinoda", email = "yuk.hik.future@gmail.com"},
]
maintainers = [
    {name = "Yukihiko Shinoda", email = "yuk.hik.future@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    # TFP runs as the `tfp` console script, not primarily as an importable library.
    "Environment :: Console",
    "Intended Audience :: Developers",
    # Terraform workspace orchestration is typically operated by ops/DevOps roles.
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # Reflects the infrastructure-management domain Terraform operates in.
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.4.2",
    "dataclasses-json",
    "invoke",
    "Jinja2",
    "pytest",
    "pytest-xdist",
    "yamldataclassconfig",
]

[project.urls]
homepage = "https://github.com/yukihiko-shinoda/tfp"
# documentation = "https://readthedocs.org"
repository = "https://github.com/yukihiko-shinoda/tfp"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.entry-points.console_scripts]
tfp = "tfp.cli:main"
tfp-report = "tfp.report:main"

[tool.bandit.assert_used]
skips = ["tests/*", "tfp/tests/*"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "tfp/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.coverage.report]
exclude_also = [
    # Assume `if TYPE_CHECKING: ... else: ...` block is covered · Issue #831 · nedbat/coveragepy
    #   https://github.com/nedbat/coveragepy/issues/831#issuecomment-517778185
    "if TYPE_CHECKING:",
    # Pylint will detect instead:
    # - abstract-method / W0223 - Pylint 2.17.0-dev0 documentation
    #   https://pylint.readthedocs.io/en/latest/user_guide/messages/warning/abstract-method.html
    "raise NotImplementedError",
]

[tool.docformatter]
recursive = true
# For compatibility with Black
# - How to Configure docformatter — docformatter 1.7.5 documentation
#   https://docformatter.readthedocs.io/en/stable/configuration.html#a-note-on-options-to-control-styles
pre_summary_space = true
wrap-descriptions = 119
wrap-summaries = 119
[tool.flake8]
# Since B950 in flake8-bugbear detects lines that exceed max_line_length by more than 10%:
# - PyCQA/flake8-bugbear: A plugin for Flake8 finding likely bugs and design problems in your program. Contains warnings that don't belong in pyflakes and pycodestyle.
#   https://github.com/PyCQA/flake8-bugbear?tab=readme-ov-file#opinionated-warnings
# This setting follows the Black documentation in case when we use flake8-bugbear:
# - Using Black with other tools - Black 25.1.0 documentation
#   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
# Set max_line_length to account for B950's 10% allowance to maintain consistency with pyvelocity
max_line_length = 108
extend_ignore = [
  # For compatibility with Black:
  # - Using Black with other tools - Black 25.1.0 documentation
  #   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
  "E203",
  "E501",
  "E701",
  # 2025-05-24 Now openstack/hacking wasn't introduced into Ruff and sorting imports is mainly considered with isort.
  "H306",
  # Cohesion may be in experimental.
  "H601",
]
statistics = true
show_source = true
exclude = [
  ".venv",
]

[tool.mypy]
strict = true

[tool.pylint]
disable = [
    # We check line length by flake8-bugbear B950.
    "line-too-long",
]
[tool.pylint.basic]
docstring-min-length = "7"

[tool.pylint.format]
max-line-length = 119

[tool.pylint.options]
# Since this rule against single responsibility principle.
# - python - Why does Pylint want two public methods per class? - Stack Overflow
#   https://stackoverflow.com/a/40258006/12721873
min-public-methods = "1"

[tool.pylint.typecheck]
# Reason: Without this, Pylint reports E1120 (no-value-for-parameter) on any zero-argument call to a
# @click.command()-decorated function (e.g. `main()` in tfp/cli.py's `if __name__ == "__main__":`
# guard), since it checks the call against the original undecorated function's signature instead of
# the click.Command the decorator produces. This tells Pylint the decorator changes the call
# signature, matching how click.command() is meant to be invoked:
# - no-value-for-parameter / E1120 - Pylint documentation
#   https://pylint.readthedocs.io/en/stable/user_guide/messages/error/no-value-for-parameter.html
# - Quickstart - Click documentation
#   https://click.palletsprojects.com/en/stable/quickstart/
signature-mutators = ["click.decorators.command"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# To prevent pytest from collecting tests from the `tests` directory in the `tfp` package, which is not intended to be a test package.
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
external = [
    "DUO",  # dlint
    "H",    # Openstack/hacking
]
select = [
    "ALL",
    # Since compatible with PEP257, we can check docstring style by Ruff and don't need to consider about docstring style separately:
    # - Should the first line of a Python function docstring be in imperative mood? (ruff / pydocstyle D401)
    #   https://zenn.dev/y_shinoda/articles/pydocstyle-d401
    "D401",    # First line should be in imperative mood
]
ignore = [
    # lint.pydocstyle
    # Reason: Docstring may be missed since docstring-min-length is set.
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in __init__
    # Reason: Google styleguide changes from `rather than imperative` to `or imperative` and PEP 257 says `prescribes as command`:
    # - styleguide/pyguide.md at 3c5c895c68bfb108cd5d936937dc36e2dfbdbcc2 · google/styleguide
    #   https://github.com/google/styleguide/blob/3c5c895c68bfb108cd5d936937dc36e2dfbdbcc2/pyguide.md?plain=1#L2072-L2077
    # - Project import generated by Copybara. · google/styleguide@ec302b3
    #   https://github.com/google/styleguide/commit/ec302b363edada1d696c476dcaf69f310755f823#diff-e1f2a5c0feebbf5a01e735ab87d79b4bec2e684f40a67d37d1b69ffa0397b60eL1985
    # - PEP 257 – Docstring Conventions | peps.python.org
    #   https://peps.python.org/pep-0257/#one-line-docstrings
    "D401",    # First line should be in imperative mood
    # Reason: First line may ends with function signature for expression.
    "D402",    # First line should not be the function’s “signature”
    # Reason: First line may ends with ":" for expression.
    "D415",    # First line should end with a period, question mark, or exclamation point
    # Reason: `Line too long` is checked by flake8-bugbear.
    "E501",    # Line too long ({width} > {limit})
]
unfixable = [
    # When fix `return a and b != ""` as `return a and b`, mypy will report warning:
    #   error: Incompatible return value type (got "Union[Literal[False], str]", expected "bool")  [return-value]
    "PLC1901",
]

[tool.ruff.lint.isort]
# To follow H301: Do not import more than one module per line (*) in Flake8 + openstack/hacking
force-single-line = true

[tool.ruff.lint.mccabe]
# The default value: 10 is too loose,
# 5 is as same as the default value of Radon for A rank that we use without any problems for a decade.
max-complexity = 5

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"tfp/tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
# Reason: invokelint pulls in types-invoke as a regular dependency, but that stub-only package
# is stale (last published for invoke 2.x) and, per PEP 561 resolution order, shadows invoke
# 3.0.3's own accurate inline types, degrading mypy's view of invoke.run()/Result/Promise to Any.
override-dependencies = [
    "types-invoke; python_version < '0'",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["py.typed", "*.jinja"]
